#ifndef UARTSTORAGEDRIVER_H_
#define UARTSTORAGEDRIVER_H_

namespace Driver
{

	class UARTStorageDriver
	{
	public:
		UARTStorageDriver();
		virtual ~UARTStorageDriver();
	};

}

#endif
